Solved navbar and footer layout issues on Home.ejs

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -90,7 +90,7 @@ h1 {
 }
 
 .fab:hover {
-    background: #101010;
+    background: #000000;
     color: #E50914;
 }
 
@@ -114,7 +114,7 @@ h1 {
 .artist:hover,.album:hover,.year:hover {
     /* font-size: 14px;
     font-weight: 500; */
-    text-shadow: 0px 0px 1px #ffffff;
+    /* text-shadow: 0px 0px 1px #ffffff; */
 }
 
 .btn-play, .btn-delete, .btn-download {
@@ -132,6 +132,7 @@ h1 {
     border: none !important;
 }
 
+
 .jp-controls-holder {
     width: 80% !important;
 }
@@ -145,6 +146,7 @@ h1 {
     background-color: #101010 !important;
     border: none !important;
     color: aliceblue;
+    font-family: "Poppins", "sans-serif";
 }
 
 a{
@@ -155,6 +157,10 @@ a{
 a:hover{
     color: white;
     text-shadow: 1px 1px 2px #ffffff;
+}
+
+.jp-interface {
+    padding: 10px !important
 }
 
 .jp-play {
@@ -170,6 +176,10 @@ a:hover{
     top: 37px !important;
 }
 
+.jp-current-time, .jp-duration {
+    font-style: normal !important;
+    color: #ffffff !important;
+}
 
 .cover_image {
     width: 100px;
